--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/VacancyLocationAddressViewModel.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/VacancyLocationAddressViewModel.cshtml
@@ -2,7 +2,7 @@
 
 @{
     <tr>
-        <td>
+        <td class="location-address">
             @Model.Address.AddressLine1
             @if (!string.IsNullOrWhiteSpace(@Model.Address.AddressLine2))
             {
@@ -10,8 +10,8 @@
             }
             <br />@Model.Address.AddressLine4 @Model.Address.Postcode
         </td>
-        <td>
-            <span type="text">@Model.NumberOfPositions</span>
+        <td class="location-positions">
+            @Model.NumberOfPositions
         </td>
     </tr>
 }
